--- a/index.html
+++ b/index.html
@@ -3,35 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>إمبراطورية محمد</title>
-    <link rel="icon" href="https://img.icons8.com/flat-round/64/crown.png" type="image/png">
+    <title>Mohamed Empire | إمبراطورية محمد</title>
+    <link rel="icon" href="https://img.icons8.com/flat-round/64/crown.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root { --bg: #050505; --gold: #d4af37; --text: #e0e0e0; }
-        body, html { margin: 0; padding: 0; width: 100%; height: 100%; background: var(--bg); color: var(--text); font-family: sans-serif; overflow: hidden; }
+        body, html { margin: 0; padding: 0; background: var(--bg); color: var(--text); font-family: sans-serif; overflow-x: hidden; }
         #starCanvas { position: fixed; top: 0; left: 0; z-index: -1; }
         
-        /* الشعار التفاعلي */
-        .logo-container { perspective: 1000px; margin-top: 30px; }
-        .main-logo {
-            font-size: 5.5em;
-            color: var(--gold);
-            text-shadow: 0 0 20px rgba(212, 175, 55, 0.5);
-            cursor: pointer;
-            transition: transform 0.1s;
-            user-select: none;
-        }
+        /* شريط التحكم العلوي */
+        .top-nav { width: 100%; display: flex; justify-content: space-between; padding: 15px 30px; box-sizing: border-box; background: rgba(0,0,0,0.5); backdrop-filter: blur(5px); }
+        .lang-btn { background: none; border: 1px solid var(--gold); color: var(--gold); padding: 5px 15px; cursor: pointer; border-radius: 20px; font-size: 14px; }
 
-        .search-box { width: 80%; max-width: 400px; margin: 20px auto; position: relative; }
-        .search-box input { width: 100%; padding: 12px 40px; border-radius: 25px; border: 1px solid var(--gold); background: rgba(0,0,0,0.5); color: white; outline: none; }
-        .search-box i { position: absolute; right: 15px; top: 15px; color: var(--gold); }
+        .logo-container { text-align: center; perspective: 1000px; margin-top: 20px; }
+        .main-logo { font-size: 5em; color: var(--gold); text-shadow: 0 0 20px rgba(212, 175, 55, 0.5); cursor: pointer; transition: 0.1s; }
 
-        .content { display: flex; flex-direction: column; align-items: center; padding: 10px 20px; height: calc(100vh - 150px); overflow-y: auto; }
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); gap: 15px; width: 100%; max-width: 900px; }
-        .item { background: rgba(26, 26, 26, 0.9); padding: 20px; border-radius: 15px; text-align: center; cursor: pointer; border: 1px solid #333; transition: 0.3s; }
-        .item:hover { border-color: var(--gold); transform: translateY(-5px); box-shadow: 0 5px 15px rgba(212, 175, 55, 0.3); }
+        .section-title { color: var(--gold); margin: 40px 0 20px; border-bottom: 2px solid var(--gold); padding-bottom: 5px; }
+
+        /* المعرض الفني */
+        .gallery { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; width: 90%; max-width: 1000px; margin-bottom: 50px; }
+        .gallery-img { width: 100%; height: 150px; background: #222; border-radius: 10px; object-fit: cover; border: 1px solid #333; transition: 0.3s; }
+        .gallery-img:hover { border-color: var(--gold); transform: scale(1.05); }
+
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); gap: 15px; width: 90%; max-width: 900px; margin: auto; }
+        .item { background: rgba(26, 26, 26, 0.9); padding: 20px; border-radius: 15px; text-align: center; cursor: pointer; border: 1px solid #333; }
         .item i { font-size: 30px; color: var(--gold); margin-bottom: 10px; }
 
+        /* Modal */
         .modal { display: none; position: fixed; z-index: 3000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); }
         .modal-content { position: relative; width: 95%; height: 90%; margin: 2% auto; border: 1px solid var(--gold); border-radius: 15px; overflow: hidden; }
         .close { position: absolute; top: 10px; left: 20px; color: white; font-size: 40px; cursor: pointer; z-index: 3001; }
@@ -40,14 +38,32 @@
 </head>
 <body onload="init()">
     <canvas id="starCanvas"></canvas>
-    
-    <div class="logo-container" onmousemove="tiltLogo(event)" onmouseleave="resetLogo()">
-        <h1 class="main-logo" id="logo">محمد</h1>
+
+    <div class="top-nav">
+        <div id="clock"></div>
+        <button class="lang-btn" id="langBtn" onclick="toggleLang()">English</button>
     </div>
 
-    <div class="search-box">
-        <i class="fas fa-search"></i>
-        <input type="text" id="searchInput" onkeyup="searchApps()" placeholder="ابحث عن تطبيق...">
+    <div class="logo-container">
+        <h1 class="main-logo" id="logoText">محمد</h1>
+    </div>
+
+    <div class="content" style="display: flex; flex-direction: column; align-items: center;">
+        <h2 class="section-title" id="appsTitle">تطبيقاتي وألعابي</h2>
+        <div class="grid">
+            <div class="item" onclick="openApp('snake.html')"><i class="fas fa-gamepad"></i><br><span class="t-app1">الثعبان</span></div>
+            <div class="item" onclick="openApp('race.html')"><i class="fas fa-car"></i><br><span class="t-app2">السباق</span></div>
+            <div class="item" onclick="openApp('calc.html')"><i class="fas fa-calculator"></i><br><span class="t-app3">الحاسبة</span></div>
+            <div class="item" onclick="openApp('contact.html')"><i class="fas fa-envelope"></i><br><span class="t-app4">اتصل بي</span></div>
+        </div>
+
+        <h2 class="section-title" id="galleryTitle">معرض الصور</h2>
+        <div class="gallery">
+            <img src="https://picsum.photos/400/300?random=1" class="gallery-img">
+            <img src="https://picsum.photos/400/300?random=2" class="gallery-img">
+            <img src="https://picsum.photos/400/300?random=3" class="gallery-img">
+            <img src="https://picsum.photos/400/300?random=4" class="gallery-img">
+        </div>
     </div>
 
     <div id="gameModal" class="modal">
@@ -55,27 +71,31 @@
         <div class="modal-content"><iframe id="appFrame"></iframe></div>
     </div>
 
-    <div class="content">
-        <div class="grid">
-            <div class="item" onclick="openApp('snake.html')"><i class="fas fa-gamepad"></i><br>الثعبان</div>
-            <div class="item" onclick="openApp('race.html')"><i class="fas fa-car"></i><br>السباق</div>
-            <div class="item" onclick="openApp('calc.html')"><i class="fas fa-calculator"></i><br>الحاسبة</div>
-            <div class="item" onclick="openApp('todo.html')"><i class="fas fa-tasks"></i><br>المهام</div>
-            <div class="item" onclick="openApp('contact.html')"><i class="fas fa-envelope"></i><br>اتصل بي</div>
-            <div class="item" onclick="openApp('admin.html')"><i class="fas fa-user-shield"></i><br>المدير</div>
-        </div>
-    </div>
-
     <script>
-        // تأثير حركة الشعار
-        const logo = document.getElementById('logo');
-        function tiltLogo(e) {
-            const rect = logo.getBoundingClientRect();
-            const x = e.clientX - rect.left - rect.width/2;
-            const y = e.clientY - rect.top - rect.height/2;
-            logo.style.transform = `rotateX(${-y/10}deg) rotateY(${x/10}deg)`;
+        let currentLang = 'ar';
+        const translations = {
+            ar: {
+                logo: "محمد", apps: "تطبيقاتي وألعابي", gallery: "معرض الصور", lang: "English",
+                app1: "الثعبان", app2: "السباق", app3: "الحاسبة", app4: "اتصل بي"
+            },
+            en: {
+                logo: "MOHAMED", apps: "Apps & Games", gallery: "Photo Gallery", lang: "العربية",
+                app1: "Snake", app2: "Racing", app3: "Calculator", app4: "Contact"
+            }
+        };
+
+        function toggleLang() {
+            currentLang = currentLang === 'ar' ? 'en' : 'ar';
+            document.documentElement.dir = currentLang === 'ar' ? 'rtl' : 'ltr';
+            document.getElementById('logoText').innerText = translations[currentLang].logo;
+            document.getElementById('appsTitle').innerText = translations[currentLang].apps;
+            document.getElementById('galleryTitle').innerText = translations[currentLang].gallery;
+            document.getElementById('langBtn').innerText = translations[currentLang].lang;
+            document.querySelector('.t-app1').innerText = translations[currentLang].app1;
+            document.querySelector('.t-app2').innerText = translations[currentLang].app2;
+            document.querySelector('.t-app3').innerText = translations[currentLang].app3;
+            document.querySelector('.t-app4').innerText = translations[currentLang].app4;
         }
-        function resetLogo() { logo.style.transform = `rotateX(0deg) rotateY(0deg)`; }
 
         function openApp(url) { document.getElementById('appFrame').src = url; document.getElementById('gameModal').style.display = "block"; }
         function closeApp() { document.getElementById('gameModal').style.display = "none"; document.getElementById('appFrame').src = ""; }
@@ -85,14 +105,14 @@
         const ctx = canvas.getContext('2d');
         canvas.width = window.innerWidth; canvas.height = window.innerHeight;
         let stars = [];
-        for(let i=0; i<150; i++) stars.push({x:Math.random()*canvas.width, y:Math.random()*canvas.height, s:Math.random()*2});
+        for(let i=0; i<100; i++) stars.push({x:Math.random()*canvas.width, y:Math.random()*canvas.height, s:Math.random()*2});
         function animate() {
             ctx.clearRect(0,0,canvas.width, canvas.height);
             ctx.fillStyle = '#d4af37';
             stars.forEach(s => { ctx.beginPath(); ctx.arc(s.x, s.y, s.s, 0, Math.PI*2); ctx.fill(); s.y += 0.5; if(s.y > canvas.height) s.y=0; });
             requestAnimationFrame(animate);
         }
-        function init() { animate(); }
+        function init() { animate(); setInterval(() => { document.getElementById('clock').innerText = new Date().toLocaleTimeString(); }, 1000); }
     </script>
 </body>
 </html>
